--- a/styles.css
+++ b/styles.css
@@ -3,26 +3,31 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    color: #333;
-    line-height: 1.6;
-    background-color: #f5f5f5;
-    min-height: 100vh; /* Garante que o corpo ocupe a altura total da tela */
-    display: flex;
-    flex-direction: column;
+    background-image: url('img/270px-Labrea.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+    width: 100%;
+    padding: 0em 2em;
 }
 
 header {
-    background-color: #0065b3;
-    color: white;
-    padding: 10px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    z-index: 1000; /* Garante que o cabeçalho esteja acima da sidebar */
-    position: relative; /* Garante que o cabeçalho esteja na frente */
+    flex-wrap: wrap;
+    padding: 2rem;
 }
 
 .logo {
@@ -32,96 +37,10 @@ header {
 }
 
 .logo img {
-    width: 180px; /* Largura reduzida */
-    height: 90px; /* Altura reduzida */
+    width: 300px; /* Largura reduzida */
+    height: 100px; /* Altura reduzida */
     border-radius: 8px; /* Bordas arredondadas ajustadas */
     object-fit: cover; /* Garante que a imagem preencha o contêiner sem distorcer */
-}
-
-main {
-    display: flex;
-    flex: 1;
-    flex-direction: column; 
-    margin-left: 250px; 
-    height: calc(100vh - 60px);
-}
-
-.sidebar {
-    width: 250px;
-    background-color: #00bfa6;
-    padding: 15px;
-    color: white;
-    position: fixed; /* Mantém a sidebar fixa na tela */
-    top: 0; /* Alinha a sidebar ao topo da página */
-    left: 0; /* Alinha a sidebar ao lado esquerdo da página */
-    height: 100vh; /* Garante que a sidebar ocupe a altura total da tela */
-    z-index: 1000; /* Garante que a sidebar esteja sobre outros elementos */
-    transition: transform 0.3s ease; /* Adiciona uma transição suave ao esconder/mostrar a sidebar */
-}
-
-.sidebar.hidden {
-    transform: translateX(-100%); /* Move a sidebar para fora da tela */
-}
-
-.sidebar nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.sidebar nav ul li {
-    margin-bottom: 10px;
-}
-
-.sidebar nav ul li a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    padding: 0.5rem;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.sidebar nav ul li a:hover {
-    background-color: #004a80; /* Cor de fundo ao passar o mouse */
-}
-
-.sidebar .social-media {
-    margin-top: 20px;
-}
-
-.sidebar .social-media a {
-    margin-right: 0.5rem;
-}
-
-.content {
-    flex: 1;
-    padding: 20px;
-    background-color: white;
-    margin-left: 250px; /* Adiciona margem esquerda para deixar espaço para a sidebar */
-    border-radius: 8px;
-}
-
-h2 {
-    border-bottom: 2px solid #0065b3;
-    padding-bottom: 5px;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-ul li {
-    margin-bottom: 10px;
-}
-
-ul li a {
-    text-decoration: none;
-    color: #0065b3;
-}
-
-ul li a:hover {
-    text-decoration: underline;
 }
 
 .search-container {
@@ -134,10 +53,13 @@ ul li a:hover {
     padding: 12px;
     border: 1px solid #ddd;
     border-radius: 20px 0 0 20px; /* Bordas arredondadas para um estilo mais moderno */
-    width: 250px; /* Largura do campo de pesquisa */
+    width: 30vw; /* Largura do campo de pesquisa */
     font-size: 16px;
     outline: none; /* Remove o contorno padrão ao focar */
     transition: box-shadow 0.3s ease-in-out; /* Transição suave para o efeito de foco */
+    color: #00BFA6;
+    font-weight: bold;
+    font-family: "Source Sans 3", sans-serif;
 }
 
 .search-container input[type="text"]:focus {
@@ -146,13 +68,15 @@ ul li a:hover {
 }
 
 .search-container button {
+    background-image: url(img/search.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 3rem;
     padding: 12px;
     border: 1px solid #ddd;
     border-radius: 0 20px 20px 0; /* Bordas arredondadas apenas na direita */
-    background-color: #0065b3;
-    color: white;
+    background-color: #15b19c;
     cursor: pointer;
-    font-size: 16px;
     transition: background-color 0.3s, box-shadow 0.3s ease-in-out; /* Transição suave para hover */
 }
 
@@ -161,121 +85,246 @@ ul li a:hover {
     box-shadow: 0 0 15px rgba(0, 255, 255, 0.8); /* Efeito de neon no botão ao passar o mouse */
 }
 
-/* Estilização do footer */
-footer {
-    background-color: #171717;
+aside{
+    background-color: #15b19c;
+    width: 21vw;
+    border-radius: 0.5em;
+    padding: 1rem;
+}
+
+aside a{
     color: white;
-    padding: 10px;
-    text-align: center;
-    border-top: 1px solid #fff; /* Borda superior para separar o conteúdo do rodapé */
-    margin-top: auto; /* Garante que o footer fique na parte inferior da tela */
-    width: 100%;
 }
 
-.footer-wrapper {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+/* Estilos básicos da sidebar */
+.sidebar nav ul {
+    list-style-type: none;
+    padding: 0;
 }
 
-.footer-info-left {
-    flex: 1;
-    text-align: left;
+.sidebar nav ul li {
+    position: relative;
 }
 
-.footer-info-center {
-    flex: 2;
-    text-align: center;
-}
-
-.footer-info-left p,
-.footer-info-center p {
-    margin: 0.25rem 0;
-}
-
-.footer-info-left a,
-.footer-info-center a {
-    color: #fff;
+.sidebar nav ul li a {
+    color: white;
     text-decoration: none;
-    font-weight: bold;
-    transition: color 0.3s, text-decoration 0.3s;
+    display: block;
+    padding: 0.5rem;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    width: 100%;
+    font-family: "Source Sans 3", sans-serif;
 }
 
-.footer-info-left a:hover,
-.footer-info-center a:hover {
+.sidebar nav ul li a:hover {
+    background-color: #0b443c;
     text-decoration: underline;
-    color: #e0e0e0;
+    width: 100%; /* Cor de fundo ao passar o mouse */
+}
+
+/* Oculta todos os submenus por padrão */
+.sub-menu {
+    display: none;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    position: absolute; /* Posiciona o submenu sobre o item pai */
+    left: 100%; /* Faz com que o submenu apareça à direita do item pai */
+    top: 0;
+    border-radius: 0.5rem;
+    background-color: #00bfa6;
+    z-index: 999; /* Garante que o submenu apareça acima de outros elementos */
+    font-family: "Source Sans 3", sans-serif;
+}
+
+/* Exibe o submenu quando o mouse passa sobre o item pai */
+li:hover > .sub-menu {
+    display: block;
+}
+
+/* Estilo para itens de submenu */
+.sub-menu li {
+    width:12rem;
+    padding: 0.3rem;
+}
+
+.sub-menu li a {
+    padding: 3em;
+    background-color: #00bfa6;
+    color: white;
+    text-decoration: none;
+    display: block;
+    font-family: "Source Sans 3", sans-serif;
+}
+
+section {
+    width: 68vw;
+}
+
+#title {
+    background-color: #202A32;
+    color: white;
+    padding: 2rem;
+    border-radius: 0.5em;
+}
+
+h2#titlet{
+    font-size: 2em;
+    font-family: "Source Sans 3", sans-serif;
+}
+
+h3.subt{
+    font-size: 1rem;
+    color: white;
+    font-family: "Source Sans 3", sans-serif;
+}
+
+#subtitle {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+hr {
+    margin: 0.5em 0em;
+}
+
+#artbody {
+    margin: 4vh 0vh;
+    background-color: white;
+    box-sizing: border-box;
+    padding: 1rem 1rem 5rem;
+    border-radius: 0.5em;
+}
+
+#artul{
+    margin-left: 3em;
+    font-family: "Source Sans 3", sans-serif;
+}
+
+.artp{
+    margin: 1em 2em;
+    font-size: 1rem;
+    font-family: "Source Sans 3", sans-serif;
 }
 
 .social-media {
-    margin-top: 0.5rem;
-}
-
-.social-media a {
-    display: inline-block;
-    margin: 0 0.5rem; /* Espaçamento entre ícones */
-    width: 24px; /* Tamanho dos ícones */
-    height: 24px;
-    background: linear-gradient(135deg, #3b5998, #8b9dc3); /* Gradiente padrão */
-    -webkit-background-clip: text;
-    color: transparent;
+    background-color: white;
+    width: 21vw;
+    gap: 1em;
+    border-radius: 0.5rem;
     text-align: center;
-    line-height: 24px;
-    vertical-align: middle;
+    padding: 1rem;
+    color: #15b19c;
+    font-weight: bold;
+    font-size: 1.2em;
+    margin: 2rem 0rem;
+    font-family: "Source Sans 3", sans-serif;
 }
 
-.social-media a.facebook {
-    background: linear-gradient(135deg, #3b5998, #8b9dc3); /* Gradiente do Facebook */
+.social-icon {
+    display: flex;
+    justify-content: center; /* Centraliza o ícone horizontalmente dentro do círculo */
+    align-items: center; /* Centraliza o ícone verticalmente dentro do círculo */
+    width: 50px; /* Tamanho do círculo */
+    height: 50px; /* Tamanho do círculo */
+    border-radius: 50%; /* Faz com que o círculo tenha bordas arredondadas */
+    background-color: #00bfa6; /* Cor de fundo verde */
+    color: white; /* Cor do ícone */
+    font-size: 24px; /* Tamanho do ícone */
+    text-decoration: none; /* Remove o sublinhado dos links */
+    transition: background-color 0.3s, color 0.3s; /* Transições suaves */
 }
 
-.social-media a.instagram {
-    background: linear-gradient(135deg, #f58529, #dd2a7b, #8134af, #515bd4); /* Gradiente do Instagram */
+.social-icon:hover {
+    background-color: whitesmoke;
+    color: #00bfa6; 
 }
 
-.social-media img {
-    width: 24px; /* Tamanho dos ícones */
-    height: auto; /* Mantém a proporção */
-    vertical-align: middle; /* Alinha os ícones com o texto */
+#social-mediasub {
+    margin: 0 auto;
+    padding: 0.5em 0em;
+    display: flex;
+    gap: 1rem;
+    width: 48%;
 }
 
-/* Estilos responsivos */
-@media (max-width: 768px) {
-    .sidebar {
-        position: static; /* Sidebar não fixa em telas menores */
-        width: 100%; /* Ocupa toda a largura da tela em dispositivos móveis */
-        height: auto; /* Ajusta a altura para o conteúdo */
-        padding: 10px;
-        transform: translateX(0); /* Garante que a sidebar esteja visível em telas menores */
-    }
+.sidebar-toggle {
+    display: none; /* Ocultar por padrão */
+    background-color: #15b19c;
+    color: white;
+    border: none;
+    width: 80vw;
+    padding: 10px;
+    font-size: 1.5rem;
+    font-family: "Source Sans 3", sans-serif;
+    cursor: pointer;
+    border-radius: 0.5em;
+}
 
-    .content {
-        margin-left: 0; /* Remove a margem esquerda para telas menores */
+@media (max-width: 1200px){
+    .social-icon {
+        background-color: white; 
+        color: #00bfa6;
     }
-
-    .footer-wrapper {
-        flex-direction: column;
-        align-items: center;
+    
+    .social-icon:hover {
+        background-color: rgba(245, 245, 245, 0);
+        color: #00bfa6; 
     }
+    
+}
 
-    .footer-info-left,
-    .footer-info-center {
-        text-align: center;
-        margin-bottom: 1rem;
-    }
-
-    .social-media {
-        margin-top: 0.25rem;
-    }
-
-    .social-media a {
-        width: 20px; /* Tamanho menor dos ícones em telas menores */
-        height: 20px;
-    }
-
+@media (max-width: 846px){
     main {
-        flex-direction: column; /* Ajusta o layout principal para uma coluna em dispositivos móveis */
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center; 
+        align-items: center;
+        gap: 1em;
+        width: 100%;
+        padding: 0em 2em;
     }
 }
+
+@media (max-width: 847px){
+
+    header {
+        display: flex;
+        flex-direction: column; /* Alinha os itens verticalmente */
+        justify-content: center; 
+        align-items: center;
+        border: none; /* Remova a borda se não for necessária */
+    }
+    .logo {
+        margin: 0 auto;
+    }
+
+    aside{
+        width: 70vw;
+    }
+
+    #social-mediasub {
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .sidebar {
+        display: none;
+    }
+
+    .sidebar-toggle {
+        display: block; /* Mostrar o botão para telas menores */
+    }
+
+    .sidebar.active {
+        display: block; /* Mostrar a sidebar quando ativa */
+    }
+    .sub-menu {
+        left: 30%; /* Faz com que o submenu apareça à direita do item pai */
+    }
+    
+}
+
+
