--- a/styles1.css
+++ b/styles1.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url('img/270px-Labrea.jpg');
+    background-image: url('img/b2ap3_large_Labrea.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
