--- a/footer.css
+++ b/footer.css
@@ -2,7 +2,7 @@
 footer {
     background: linear-gradient(135deg, #00bfa6, #004d40); /* Gradiente de verde claro para verde escuro */
     color: #fff;
-    padding: 2rem 0; faca com que o roda pe fique travado em todos os tipos de dispositivo moveis 
+    padding: 2rem 0;
     text-align: center;
     position: relative;
     bottom: 0;
